-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
Windows 7, msvc 2010
-
e95d94cbbdcb6e7f7f87f1e636a31f21cc5e8563,ce755299684b06ddd936b5cf8ad7907d79000a43
Windows: QRawFont autotest fails:
Totals: 5 passed, 1247 failed, 0 skipped
Remember to enable the test in CI after it has been fixed.
- is required for
-
QTBUG-24203 Qt 5.0 - Windows: Fix tests
-
- Closed
-
For Gerrit Dashboard: QTBUG-24197 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
24191,1 | Windows: Fix QRawFont loading from data. | master | qt/qtbase | Status: MERGED | +2 | 0 |
24344,1 | Fix QRawFont autotest in Windows | master | qt/qtbase | Status: MERGED | +2 | 0 |